--- a/helm/virtual-dsm/values.yaml
+++ b/helm/virtual-dsm/values.yaml
@@ -68,6 +68,12 @@ service:
 #      protocol: TCP
 #      targetPort: 5001
 
+httpRoute:
+  request:
+    timeouts: 0s
+  backedRequest:
+    timeouts: 0s
+
 gatewayClass :
   enabled: false
   name: main-gateway-class
@@ -76,35 +82,27 @@ gatewayClass :
 gateway:
   enabled: false
   ip: 192.168.1.0
-  domain: dsm.local
-  routes: []
-#    - name: http
-#      port: 5000
-#      protocol: http
-#    - name: tcp
-#      port: 22
-#      protocol: tcp
-#    - name: https
-#      port: 5001
-#      protocol: TCP
-#      targetPort: 5001
+routes: []
+#  - name: http
+#    port: 5000
+#    protocol: http
+#    hostName: chart-example.local
+#  - name: tcp
+#    port: 22
+#    protocol: tcp
+#    hostName:
+#  - name: https
+#    port: 5001
+#    hostName: chart-example.local
+#    protocol: TCP
+#    targetPort: 5001
+#    hostName:
 
-# This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
-ingress:
+tls:
   enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  secretName: chart-example-tls
+
+url:
 
 resources:
     requests:
